--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,7 +288,8 @@ workflows:
           requires:
             - "Testing << matrix.architecture >> Container Image"
             - "Testing Python Code"
-            - "Scan << matrix.architecture >> Container Image"
+            # - "Scan << matrix.architecture >> Container Image"
+            - "Scan amd64 Container Image"
       - publish-manifest:
           name: "Publish Manifest to ECR"
           requires:
